# spark-intelligence-builder

./: .gitignore  .gitleaks.toml  .spark-source-truth.toml  AGENTS.md  BUG_AUDIT_REPORT.md  CLAUDE.md  README.md  SECURITY.md  TASK.md  TEST.md  commit_msg.txt  commit_msg2.txt  commit_msg3.txt  pr_body.md  pr_body.txt  pr_body2.md  pr_body3.md  pyproject.toml  requirements.txt  spark-compete-hotfix-v1-packet.json  spark-compete-packet-corrected.json  spark-compete-packet-final.json  spark-compete-packet-v1.json  spark-compete-packet.json  spark.toml  start-telegram.ps1  task-telegram-agent.md
.bug-hunter/: proof.md
docs/: AGENT_IDENTITY_EXECUTION_CHECKLIST_2026-03-28.md  AGENT_IDENTITY_IMPLEMENTATION_PLAN_2026-03-28.md  AGENT_IDENTITY_SYSTEM_SPEC_2026-03-28.md  AGENT_OPERATING_CONTEXT_AND_DRIFT_CONTROL.md  APRIL_10_MEMORY_HANDOFF.md  ARCHITECTURE.md  ARCHITECTURE_SPARK_INTELLIGENCE_V1.md  BUILDER_POST_TRANCHE1_ROADMAP_2026-03-27.md  BUILDER_PRELAUNCH_HANDOFF_2026-03-27.md  BUILDER_PRELAUNCH_TRUTH_SURFACES_NOTE_2026-03-27.md  CAPABILITY_PROPOSAL_STANDARD_V1.md  CODING_RULESET_V1.md  CONFIG_AND_STATE_SCHEMA_SPEC_V1.md  CONTINUATION_PLAN_2026-04-09.md  CONVERSATION_CONTEXT_HARNESS_2026-04-29.md  CRON_JOB_HARNESS_SPEC_V1.md  DESKTOP_BUILDER_BACKLOG_MANIFEST_2026-06-08.md  DISCORD_OPERATOR_RUNBOOK_2026-03-26.md  DOMAIN_CHIP_ATTACHMENT_CONTRACT_V1.md  EXECUTION_REFOCUS_TELEGRAM_LLM_2026-03-26.md  GATEWAY_PROVIDER_AUTH_READINESS_REVIEW_2026-03-26.md  GATEWAY_RUNTIME_OPERATOR_RECOVERY_REVIEW_2026-03-26.md  IDENTITY_AND_SESSION_MODEL_SPEC_V1.md  IMPLEMENTATION_PLAN_V1.md  IMPLEMENTATION_READINESS_AUDIT_2026-03-25.md  IMPLEMENTATION_STATUS_2026-03-26.md  IMPLEMENTATION_WORKPLAN_2026-03-26.md  IMPORT_AND_MIGRATION_SPEC_V1.md  LOCOMO_CONVERSATIONAL_SHADOW_EVAL_2026-04-22.md  LOCOMO_UNSEEN_SLICE_FOLLOWUP_2026-04-22.md  (+89 more)
(+529 files in other folders)
