[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-intelligence"
version = "0.1.0"
description = "Spark-native persistent agent runtime shell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyNaCl>=1.6.2",
  "PyYAML>=6.0",
  "spark-character @ git+https://github.com/vibeforge1111/spark-character.git@master",
]

[project.scripts]
spark-intelligence = "spark_intelligence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
