[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-intelligence"
version = "0.1.0"
description = "Spark-native persistent agent runtime shell"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
  "PyNaCl>=1.6.2",
  "PyYAML>=6.0",
  "spark-character @ git+https://github.com/vibeforge1111/spark-character.git@9a6a3a637eda4641fafcf4335d5ba5b9f6919d46",
]

[project.scripts]
spark-intelligence = "spark_intelligence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
